--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="theme-color" content="#000000" />
     <meta
-      name="FicSullana"
-      content="FicSullana"
+      name="PRESTAMO-DEMO"
+      content="PRESTAMO-DEMO"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>FicSullana</title>
+    <title>PRESTAMO-DEMO</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
